--- a/index.html
+++ b/index.html
@@ -129,6 +129,41 @@
       <!-- /. header -->
       <main>
             <div class="jumbotron">
+                  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">           
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption w-25 text-start text-white">
+                              <img class="logo_return"src="./assets/img/returnal-hero-banner-logo.png" alt="">
+                              <h3 class="pt-3 fs_h3">Rompi il cerchio</h3>
+                              <p class="fs_10">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
+                              <button class="btn btn-danger rounded-5">Acquista ora</button>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>Second slide label</h5>
+                              <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>Third slide label</h5>
+                              <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                  </div>
             </div>
             <!-- /. jumbotron -->
             <div class="games">
