add games section

--- a/index.html
+++ b/index.html
@@ -169,12 +169,24 @@
             <div class="games">
                   <div class="container p-4">
                         <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 g-2">
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
+                              <div class="col">
+                                    <img class="rounded-4" src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img class="rounded-4"src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img class="rounded-4"src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img class="rounded-4"src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img class="rounded-4"src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img class="rounded-4"src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                              </div>
                         </div>
                   </div>
             </div>
