--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                               <img class="logo_return"src="./assets/img/returnal-hero-banner-logo.png" alt="">
                               <h3 class="pt-3 fs_h3">Rompi il cerchio</h3>
                               <p class="fs_10">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
-                              <button class="btn btn-danger rounded-5">Acquista ora</button>
+                              <button class="btn btn-danger rounded-5 bg_important">Acquista ora</button>
                             </div>
                           </div>
                           <div class="carousel-item">
@@ -191,11 +191,25 @@
                   </div>
             </div>
             <!-- /. games -->
-            <div class="playstation_v">
+            <div class="playstation_v my-5">
+                  <div class="text-center">
+                        <h5 class="text-uppercase primary_light">Play has no limits</h5>
+                        <h2>Ecco la Playstation 5</h2>
+                        <p class="text-muted">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                  </div>
                   <div class="container p-4">
                         <div class="console row row-cols-1 row-cols-md-2">
-                              <div class="col"></div>
-                              <div class="col"></div>
+                              <div class="col d-flex align-items-center">
+                                    <div>
+                                          <h2>Console Playstation 5</h2>
+                                          <p class="text-muted">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                                          <button class="btn btn-primary bg_primary_lighter rounded-5">Maggiori informazioni</button>
+                                    </div>
+
+                              </div>
+                              <div class="col">
+                                    <img class="w-100"src="./assets/img/playstation-5-thumb.png" alt="">
+                              </div>
                         </div>
                   </div>
                   <div class="container p-4">
