--- a/index.html
+++ b/index.html
@@ -214,11 +214,21 @@
                   </div>
                   <div class="container p-4">
                         <div class="accessories row row-cols-3 row-cols-md-5">
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
+                              <div class="col">
+                                    <img src="./assets/img/playstation-5-thumb.png" alt="">
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/joypad-thumb.png" alt="">
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/headset-thumb.png" alt="">
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/remote-thumb.png" alt="">
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/camera-thumb.jpg" alt="">
+                              </div>
                         </div>
                   </div>
             </div>
