--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                               <div class="carousel-item active">
                                     <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
                                     <div class="carousel-caption w-25 text-start text-white">
-                                          <img class="logo_return"src="./assets/img/returnal-hero-banner-logo.png" alt="">
+                                          <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
                                           <h3 class="pt-3 fs_h3">Rompi il cerchio</h3>
                                           <p class="fs_10">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
                                           <button class="btn btn-danger rounded-5 bg_important">Acquista ora</button>
@@ -173,19 +173,19 @@
                                     <img class="rounded-4" src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
                               </div>
                               <div class="col">
-                                    <img class="rounded-4"src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                                    <img class="rounded-4" src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                               </div>
                               <div class="col">
-                                    <img class="rounded-4"src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                                    <img class="rounded-4" src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
                               </div>
                               <div class="col">
-                                    <img class="rounded-4"src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                                    <img class="rounded-4" src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                               </div>
                               <div class="col">
-                                    <img class="rounded-4"src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                                    <img class="rounded-4" src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
                               </div>
                               <div class="col">
-                                    <img class="rounded-4"src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                                    <img class="rounded-4" src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                               </div>
                         </div>
                   </div>
@@ -208,7 +208,7 @@
                                     
                               </div>
                               <div class="col">
-                                    <img class="w-100"src="./assets/img/playstation-5-thumb.png" alt="">
+                                    <img class="w-100" src="./assets/img/playstation-5-thumb.png" alt="">
                               </div>
                         </div>
                   </div>
@@ -243,71 +243,69 @@
                         </div>
                   </div>
             </div>
-      </div>
-      <!-- /.banner -->
-      <div class="new_releases bg_darker">
-            <div class="container p-4 text-white">
-                  <h3>Nuove uscite</h3>
-                  <p>Giochi incredibili per PS4 e PS5 disponibili ora</p>
-                  <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6">
-                        <div class="col">
-                              <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                              <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                              <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                              <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                              <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                              <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                              <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                              <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                              <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                              <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                              <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                              <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
-                        </div>
-                        <div class="col">
-                              <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                              <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
+            <!-- /.banner -->
+            <div class="new_releases bg_darker">
+                  <div class="container p-4 text-white">
+                        <h3>Nuove uscite</h3>
+                        <p>Giochi incredibili per PS4 e PS5 disponibili ora</p>
+                        <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6">
+                              <div class="col">
+                                    <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                    <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                    <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                    <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                    <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                    <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                    <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                    <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                    <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                    <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                    <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                    <p class="pt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</p>
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                    <p class="pt-2">Crash Bandicoot 4: It's About Time</p>
+                              </div>
                         </div>
                   </div>
             </div>
-      </div>
-      <!-- /. new releases -->
-      <div class="playstation_iv">
-            <div class="container p-4">
-                  <div class="text-center">
-                        <h2>Esplora con Playstation&reg; 4</h2>
-                        <p class="text-muted">Giochi incredibili e intrattenimento senza fine. <br>
-                              Non c'è mai stato un momento miglior eper giocare sulla tua PS4.</p>
+            <!-- /. new releases -->
+            <div class="playstation_iv">
+                  <div class="container p-4">
+                        <div class="text-center">
+                              <h2>Esplora con Playstation&reg; 4</h2>
+                              <p class="text-muted">Giochi incredibili e intrattenimento senza fine. <br> Non c'è mai stato un momento miglior eper giocare sulla tua PS4.</p>
                         </div>
                         <div class="row row-cols-1 row-cols-md-3 p-4">
                               <div class="col">
@@ -325,8 +323,7 @@
                                           <img src="./assets/img/double11-202010-tw-psvr.jpg" class="card-img-top" alt="...">
                                           <div class="card-body">
                                                 <h3 class="card-title fw-bold">Playstation VR</h3>
-                                                <p class="card-text text-muted">Oltre 500 titoli ed esperienze di gioco.<br>
-                                                Scoprili tutti.</p>
+                                                <p class="card-text text-muted">Oltre 500 titoli ed esperienze di gioco.<br>Scoprili tutti.</p>
                                                 <a href="#" class="btn btn-primary bg_primary_lighter rounded-5">Scopri di più</a>
                                           </div>
                                     </div>
@@ -345,11 +342,21 @@
                   </div>
             </div>
             <!-- /.playstation_iv -->
-            <div class="playstation_plus">
+            <div class="playstation_plus bg_lightning">
                   <div class="container">
-                        <div class="row row-cols-md-2 p-4">
-                              <div class="col"></div>
-                              <div class="col d-none d-md-block"></div>
+                        <div class="row row-cols-md-2 px-4">
+                              <div class="col d-flex align-items-center">
+                                    <div class="card border-0 bg-transparent">
+                                          <img src="./assets/img/ps-plus-logo.png" class="card-img-top w-50" alt="...">
+                                          <div class="card-body">
+                                                <p class="card-text my-2">Migliora la tua esperienza playstation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                                                <button type="button" class="btn btn-outline-secondary rounded-5 bg_lighter_nd primary_light border-0 mt-4">Esplora Playstation Plus</button>
+                                          </div>
+                                    </div>
+                              </div>
+                              <div class="col d-none d-md-block">
+                                    <img src="./assets/img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                              </div>
                         </div>
                   </div>
             </div>
