add sales section

--- a/index.html
+++ b/index.html
@@ -362,11 +362,21 @@
             </div>
             <!-- /.playstation_plus -->
             <div class="sales">
-                  <div class="container">
+                  <div class="container p-4">
+                        <div class="text-center">
+                              <h2>Nuovi sconti sul Playstation&reg; Store</h2>
+                              <p class="text-muted">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutt in un unico posto.</p>
+                        </div>
                         <div class="row row-cols-1 row-cols-md-3 p-4">
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
+                              <div class="col">
+                                    <img src="./assets/img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/playstation-store-free-to-play-spotlight.png" alt="">
+                              </div>
                         </div>
                   </div>
             </div>
