--- a/index.html
+++ b/index.html
@@ -381,22 +381,43 @@
                   </div>
             </div>
             <!-- /.sales -->
-            <div class="playstation_now">
+            <div class="playstation_now bg_primary_dark">
                   <div class="container">
                         <div class="row row-cols-md-2 p-4">
-                              <div class="col"></div>
-                              <div class="col d-none d-md-block"></div>
+                              <div class="col d-flex align-items-center">
+                                    <div class="card border-0 bg-transparent">
+                                          <img src="./assets/img/ps-now-logo-two-column.png" class="card-img-top w-50" alt="...">
+                                          <div class="card-body">
+                                                <p class="card-text my-2 text-white">Migliora la tua esperienza playstation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                                                <button type="button" class="btn btn-outline-secondary rounded-5 bg_lightning border-0 mt-4 text-dark">Esplora PlayStation Now</button>
+                                          </div>
+                                    </div>
+                              </div>
+                              <div class="col d-none d-md-block">
+                                    <img src="./assets/img/ps-now-april-featured-image-block.png" alt="">
+                              </div>
                         </div>
                   </div>
             </div>
             <!-- /.playstation_now -->
             <div class="social">
                   <div class="container">
+                        <div class="text-center">
+                              <h2>Seguici sui social media</h2>
+                        </div>
                         <div class="row row-cols-2 row-cols-sm-4 p-4">
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
-                              <div class="col"></div>
+                              <div class="col">
+                                    <img src="./assets/img/twitter.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/facebook.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/instagram.jpg" alt="">
+                              </div>
+                              <div class="col">
+                                    <img src="./assets/img/youtube.png" alt="">
+                              </div>
                         </div>
                   </div>
             </div>
