add correction section social

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                           <li class="nav-item dropdown">
                                                 <a class="nav-link d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                       Giochi                                          
-                                                      <img class="arrow" src="./assets/img/chevron-down-solid.svg" alt="">  
+                                                      <img class="arrow" src="./assets/img/chevron-down-solid.svg" alt="">
                                                 </a>
                                                 <ul class="dropdown-menu">
                                                       <li class="d-flex justify-content-center border-bottom">
@@ -55,9 +55,9 @@
                                                             </div>
                                                       </li>
                                                       <li class="d-flex justify-content-center">
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
+                                                            <a href="">Link Giochi</a>
+                                                            <a href="">Link Giochi</a>
+                                                            <a href="">Link Giochi</a>
                                                       </li>
                                                 </ul>      
                                           </li>
@@ -82,9 +82,9 @@
                                                             </div>
                                                       </li>
                                                       <li class="d-flex justify-content-center">
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
+                                                            <a href="">Link Hardware</a>
+                                                            <a href="">Link Hardware</a>
+                                                            <a href="">Link Hardware</a>
                                                       </li>
                                                 </ul> 
                                           </li>
@@ -109,9 +109,9 @@
                                                             </div>
                                                       </li>
                                                       <li class="d-flex justify-content-center">
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
+                                                            <a href="">Link Servizi</a>
+                                                            <a href="">Link Servizi</a>
+                                                            <a href="">Link Servizi</a>
                                                       </li>
                                                 </ul> 
                                           </li>
@@ -136,9 +136,9 @@
                                                             </div>
                                                       </li>
                                                       <li class="d-flex justify-content-center">
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
+                                                            <a href="">Link Novità</a>
+                                                            <a href="">Link Novità</a>
+                                                            <a href="">Link Novità</a>
                                                       </li>
                                                 </ul> 
                                           </li>
@@ -163,9 +163,9 @@
                                                             </div>
                                                       </li>
                                                       <li class="d-flex justify-content-center">
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
+                                                            <a href="">Link Acquisti</a>
+                                                            <a href="">Link Acquisti</a>
+                                                            <a href="">Link Acquisti</a>
                                                       </li>
                                                 </ul> 
                                           </li>
@@ -190,9 +190,9 @@
                                                             </div>
                                                       </li>
                                                       <li class="d-flex justify-content-center">
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
-                                                            <a href="">Link</a>
+                                                            <a href="">Link Supporto</a>
+                                                            <a href="">Link Supporto</a>
+                                                            <a href="">Link Supporto</a>
                                                       </li>
                                                 </ul> 
                                           </li>
@@ -237,8 +237,7 @@
                                           </div>
                                     </div>
                                     
-                              </div>
-                              
+                              </div>                         
                         </div>      
                   </nav>
                   <!-- <div class="nav_bottom d-none">
@@ -540,12 +539,10 @@
                   </div>
             </div>
             <!-- /.playstation_now -->
-            <div class="social">
+            <div class="social py-5">
                   <div class="container">
-                        <div class="text-center">
-                              <h2>Seguici sui social media</h2>
-                        </div>
-                        <div class="row row-cols-2 row-cols-sm-4 p-4">
+                              <h2 class="text-center">Seguici sui social media</h2>
+                        <div class="row row-cols-2 row-cols-sm-4 p-4 g-4">
                               <div class="col">
                                     <img src="./assets/img/twitter.jpg" alt="">
                               </div>
