--- a/index.html
+++ b/index.html
@@ -268,40 +268,16 @@
       <!-- /. header -->
       <main>
             <div class="jumbotron">
-                  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">           
-                        <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                    <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption w-25 text-start text-white">
-                                          <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
-                                          <h3 class="pt-3 fs_h3">Rompi il cerchio</h3>
-                                          <p class="fs_10">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
-                                          <button class="btn btn-danger rounded-5 bg_important">Acquista ora</button>
-                                    </div>
+                  <div class="container">
+                        
+                        <div class="card">
+                              <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
+                              <div class="card-body">
+                                <h5 class="card-title">Rompi il cerchio</h5>
+                                <p class="card-text">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
+                                <a href="#" class="btn btn-danger rounded-5 bg_important">Acquista ora</a>
                               </div>
-                              <div class="carousel-item">
-                                    <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                          <h5>Second slide label</h5>
-                                          <p>Some representative placeholder content for the second slide.</p>
-                                    </div>
-                              </div>
-                              <div class="carousel-item">
-                                    <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                          <h5>Third slide label</h5>
-                                          <p>Some representative placeholder content for the third slide.</p>
-                                    </div>
-                              </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                        </button>
+                            </div>
                   </div>
             </div>
             <!-- /. jumbotron -->
@@ -541,7 +517,7 @@
             <!-- /.playstation_now -->
             <div class="social py-5">
                   <div class="container">
-                              <h2 class="text-center">Seguici sui social media</h2>
+                        <h2 class="text-center">Seguici sui social media</h2>
                         <div class="row row-cols-2 row-cols-sm-4 p-4 g-4">
                               <div class="col">
                                     <img src="./assets/img/twitter.jpg" alt="">
