--- a/bonus/index.html
+++ b/bonus/index.html
@@ -268,23 +268,22 @@
       <!-- /. header -->
       <main>
             <div class="jumbotron">
-                  <div class="container">
-                        
+                  <div class="container">            
                         <div class="card">
                               <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
                               <div class="card-body">
                                 <h5 class="card-title">Rompi il cerchio</h5>
                                 <p class="card-text">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
-                                <a href="#" class="btn btn-danger rounded-5 bg_important">Acquista ora</a>
+                                <button type="submit" class="btn btn-danger bg_important rounded-5">Acquista Ora</button>
                               </div>
                             </div>
                   </div>
             </div>
             <!-- /. jumbotron -->
-            <div class="games">
+            <div class="games py-5">
                   <div class="container p-4">
                         <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 g-2">
-                              <div class="col">
+                              <div class="col rounded-4">
                                     <img class="rounded-4" src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
                               </div>
                               <div class="col">
