--- a/bonus/index.html
+++ b/bonus/index.html
@@ -428,7 +428,9 @@
                                           <div class="card-body">
                                                 <h3 class="card-title fw-bold">Playstation 4</h3>
                                                 <p class="card-text text-muted">Giochi incredibili live su PS4, con 1TB di spazio di archiviazione.</p>
-                                                <a href="#" class="btn btn-primary bg_primary_lighter rounded-5">Scopri di più</a>
+                                                <button class="btn btn-primary bg_primary_lighter rounded-5">
+                                                      <a href="" class="text-white">Scopri di più</a>
+                                                </button>
                                           </div>
                                     </div>
                               </div>
@@ -438,7 +440,9 @@
                                           <div class="card-body">
                                                 <h3 class="card-title fw-bold">Playstation VR</h3>
                                                 <p class="card-text text-muted">Oltre 500 titoli ed esperienze di gioco.<br>Scoprili tutti.</p>
-                                                <a href="#" class="btn btn-primary bg_primary_lighter rounded-5">Scopri di più</a>
+                                                <button class="btn btn-primary bg_primary_lighter rounded-5">
+                                                      <a href="" class="text-white">Scopri di più</a>
+                                                </button>
                                           </div>
                                     </div>
                               </div>
@@ -448,7 +452,9 @@
                                           <div class="card-body">
                                                 <h3 class="card-title fw-bold">Accessori</h3>
                                                 <p class="card-text text-muted">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
-                                                <a href="#" class="btn btn-primary bg_primary_lighter rounded-5">Scopri di più</a>
+                                                <button class="btn btn-primary bg_primary_lighter rounded-5">
+                                                      <a href="" class="text-white">Scopri di più</a>
+                                                </button>
                                           </div>
                                     </div>
                               </div>
@@ -464,7 +470,7 @@
                                           <img src="./assets/img/ps-plus-logo.png" class="card-img-top w-50" alt="...">
                                           <div class="card-body">
                                                 <p class="card-text my-2">Migliora la tua esperienza playstation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
-                                                <button type="button" class="btn btn-outline-secondary rounded-5 bg_lighter_nd primary_light border-0 mt-4">Esplora Playstation Plus</button>
+                                                <button type="button" class="btn btn-outline-secondary rounded-5 bg_lighter_nd border-0 mt-4"><a href="" class="text-primary">Esplora Playstation Plus</a></button>
                                           </div>
                                     </div>
                               </div>
@@ -484,12 +490,15 @@
                         <div class="row row-cols-1 row-cols-md-3 p-4">
                               <div class="col">
                                     <img src="./assets/img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                                    <button class="buy_now text-center text-white">BUY NOW</button>
                               </div>
                               <div class="col">
                                     <img src="./assets/img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                                    <button class="buy_now text-center text-white">BUY NOW</button>
                               </div>
                               <div class="col">
                                     <img src="./assets/img/playstation-store-free-to-play-spotlight.png" alt="">
+                                    <button class="buy_now text-center text-white">BUY NOW</button>
                               </div>
                         </div>
                   </div>
