--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                           </li>
                                     </ul>
                                     <div class="d-flex" role="search">
-                                          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                          <div class="collapse navbar-collapse">
                                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
                                                       <li class="nav-item dropdown">
                                                             <a class="nav-link d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
